Change Makefile so it compiles when it should

--- a/main/Makefile
+++ b/main/Makefile
@@ -8,17 +8,19 @@ OUTDIR = bin
 
 GENMOD = BStarTree NormalNode RootNode Node
 
+TEMPLATE_SRC = $(patsubst %, $(SDIR)/%.cpp, $(GENMOD))
+
 _DEPS = 
 DEPS = $(patsubst %, $(IDIR)/%.h, $(_DEPS) $(GENMOD))
 
 _OBJ = main
 OBJ = $(patsubst %, $(ODIR)/%.o, $(_OBJ) )   #$(GENMOD))
 
-$(ODIR)/%.o: $(SDIR)/%.cpp $(DEPS)
+$(ODIR)/%.o: $(SDIR)/%.cpp $(DEPS) $(TEMPLATE_SRC)
 	$(CXX) -c -o $@ $< $(CXXFLAGS)
 
-BStarTree: $(OBJ)
-	$(CXX) -o $(OUTDIR)/$@ $^ $(CXXFLAGS)
+$(OUTDIR)/BStarTree: $(OBJ)
+	$(CXX) -o $@ $^ $(CXXFLAGS)
 
 .PHONY: clean
 
